changes made to index.html to navigate to login page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<h3>Welcome to Foodies!We deliver in no time.</h3
+<h3>Welcome to Foodies!We deliver in no time.</h3>
+<a href="login.html">Click here to login </a>
 </body>
 </html>
